# scripted-prompt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: release.yml
examples/: sample_data.json
scripts/: build-release.js  build-release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: mod.rs  script.rs  settings.rs  storage.rs  template.rs
src-tauri/src/logic/: ai.rs  history.rs  mod.rs  search.rs  tags.rs  variable.rs
src-tauri/src/utils/: clipboard.rs  mod.rs  validator.rs
ui/: index.html  styles.css
ui/js/: api.js  bootstrap.js  composition.js  data-transfer.js  main.js  modals.js  new-items.js  pane-layout.js  preview.js  recent.js  script-editor.js  state.js  tree.js  utils.js
