[package]
name = "scripted-prompt"
version = "1.3.0"
description = "A local desktop app for collecting, organizing, and composing reusable prompt blocks."
authors = ["Dylan Chen"]
edition = "2021"

[lib]
name = "scripted_prompt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.3", features = ["v4", "serde"] }
dirs = "5.0"
fuzzy-matcher = "0.3"

# Tauri 依赖
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
